Removed SwingX extensions

--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -1,9 +1,10 @@
 annotation.processing.enabled=true
 annotation.processing.enabled.in.editor=false
-annotation.processing.processor.options=
 annotation.processing.processors.list=
 annotation.processing.run.all.processors=true
 annotation.processing.source.output=${build.generated.sources.dir}/ap-source-output
+application.title=DataWarehouse
+application.vendor=dking
 build.classes.dir=${build.dir}/classes
 build.classes.excludes=**/*.java,**/*.form
 # This directory is removed when the project is cleaned:
@@ -24,13 +25,13 @@ debug.test.classpath=\
 dist.dir=dist
 dist.jar=${dist.dir}/DataWarehouse.jar
 dist.javadoc.dir=${dist.dir}/javadoc
+endorsed.classpath=
 excludes=
 file.reference.ojdbc6.jar=/Users/dking/Documents/Software/Java/Oracle JDBC/ojdbc6.jar
 file.reference.swingx-all-1.6.3.jar=/Users/dking/Documents/Software/Java/swingx-all-1.6.3.jar
 includes=**
 jar.compress=false
 javac.classpath=\
-    ${libs.swing-layout.classpath}:\
     ${libs.absolutelayout.classpath}:\
     ${file.reference.swingx-all-1.6.3.jar}:\
     ${file.reference.ojdbc6.jar}
