Removed SwingX extensions

--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -28,13 +28,12 @@ dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=
 excludes=
 file.reference.ojdbc6.jar=/Users/dking/Documents/Software/Java/Oracle JDBC/ojdbc6.jar
-file.reference.swingx-all-1.6.3.jar=/Users/dking/Documents/Software/Java/swingx-all-1.6.3.jar
 includes=**
 jar.compress=false
 javac.classpath=\
     ${libs.absolutelayout.classpath}:\
-    ${file.reference.swingx-all-1.6.3.jar}:\
-    ${file.reference.ojdbc6.jar}
+    ${file.reference.ojdbc6.jar}:\
+    ${libs.swing-layout.classpath}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
