--- a/application.properties
+++ b/application.properties
@@ -1,7 +1,7 @@
-#Mon Mar 31 18:08:35 EDT 2014
-port=1521
-password=teradata
-serviceName=dworcl
-driver=oracle.jdbc.driver.OracleDriver
-server=olympia.unfcsd.unf.edu
-username=tridata
+#Mon Apr 07 16:15:29 EDT 2014
+db.password=teradata
+db.port=1521
+db.username=tridata
+db.service=dworcl
+db.driver=oracle.jdbc.driver.OracleDriver
+db.hostname=olympia.unfcsd.unf.edu
